<resources>
    <string name="app_name">WhiteList</string>
    <string name="Generos">Genders</string>
    <string name="item1">Homepage</string>
    <string name="item2">Languaje</string>
    <string name="Ficcion">Fiction</string>
    <string name="Accion">Action</string>
    <string name="Amor">Love</string>
    <string name="Drama">Drama</string>
    <string name="Aventuras">Adventures</string>
    <string name="Terror">Terror</string>
    <string name="item3">To Register</string>
    <string name="Descripcion">Description</string>
    <string name="item4">List movies</string>
    <string name="Ingles">English</string>
    <string name="Español">Spanish</string>
    <string name="Frances">French</string>
    <string name="Aleman">German</string>
    <string name="Japones">Japanese</string>
    <string name="Presione">Press to talk</string>
    <string name="Año">Year</string>
    <string name="title_activity_mapa">Mapa</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="title_activity_map">Map</string>
    <string name="mapa">Mapa</string>
    <string name="cerrar_sesion">Cerrar sesion</string>
    <string name="todo">TODO</string>
</resources>