<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/purple_500"

    >

    <item
        android:id="@+id/item1"
        android:background="@color/purple_500"
        android:title="@string/item1" />
    <item
        android:id="@+id/item2"
        android:background="@color/purple_500"
        android:title="@string/item2" />
    <item
        android:id="@+id/item3"
        android:background="@color/purple_500"
        android:title="@string/item3" />

    <item
        android:id="@+id/item4"
        android:background="@color/purple_500"
        android:title="@string/item4" />
    <item
        android:id="@+id/item5"
        android:background="@color/purple_500"
        android:title="cerras sesion" />

</menu>