<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="@color/purple_700"
    tools:context=".InfoPopUp">

    <TextView
        android:id="@+id/txIdioma"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="50dp"
        android:textStyle="bold"
        android:textAlignment="center"
        android:text="@string/item2"/>

    <TextView
        android:id="@+id/txIng"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="30dp"
        android:textStyle="bold"
        android:textAlignment="center"
        android:text="@string/Ingles"/>
    <TextView
        android:id="@+id/txEsp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="30dp"
        android:textStyle="bold"
        android:textAlignment="center"
        android:text="@string/Español"/>
    <TextView
        android:id="@+id/txFra"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="30dp"
        android:textStyle="bold"
        android:textAlignment="center"
        android:text="@string/Frances"/>
    <TextView
        android:id="@+id/txGer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="30dp"
        android:textStyle="bold"
        android:textAlignment="center"
        android:text="@string/Aleman"/>
    <TextView
        android:id="@+id/txJpn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="30dp"
        android:textStyle="bold"
        android:textAlignment="center"
        android:text="@string/Japones"/>

</LinearLayout>