<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:background="@drawable/fondo"
    tools:context=".Modif">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="EDITOR DE PELICULAS"
        android:textAlignment="center"
        android:textSize="25sp"
        android:textStyle="bold"
        android:layout_marginBottom="30dp"/>



    <EditText
        android:id="@+id/McampoNombre"
        android:textStyle="bold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Titulo"/>

    <EditText
        android:id="@+id/MspinnerGenero"
        android:spinnerMode="dialog"
        android:prompt="@string/Generos"
        android:textStyle="bold"
        android:hint="@string/Generos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <EditText
        android:id="@+id/MspinnerYear"
        android:spinnerMode="dialog"
        android:prompt="@string/Año"
        android:hint="@string/Año"
        android:textStyle="bold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <EditText
        android:id="@+id/McampoDescrip"
        android:textStyle="bold"
        android:inputType="textMultiLine"
        android:lines="8"
        android:minLines="6"
        android:maxLines="10"
        android:scrollbars="vertical"
        android:layout_width="fill_parent"
        android:layout_height="100dp"
        android:hint="@string/Descripcion"
        android:paddingLeft="10dp">

    </EditText>


    <ImageButton
        android:id="@+id/MbtnMicro"
        android:layout_marginTop="30dp"
        android:layout_gravity="center"
        android:src="@drawable/ic_microfono"
        android:background="@null"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/Presione"
        android:textColor="#191919"/>


    <Button
        android:id="@+id/MbtnRegistro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="Guardar Pelicula" />


</LinearLayout>